microservices/gateway/gateway-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ms-services
  namespace: ms
spec:
  hosts:
    - "*"
  gateways:
    - ms-gateway
  http:
    - match:
        - uri:
            prefix: /books
        - uri:
            prefix: /authors
      route:
        - destination:
            host: book-service.ms.svc.cluster.local
            subset: stable
          weight: 50
        - destination:
            host: book-service.ms.svc.cluster.local
            subset: canary
          weight: 50
    - match:
        - uri:
            prefix: /libraries
      route:
        - destination:
            host: library-service.ms.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: /stock
      route:
        - destination:
            host: library-service.ms.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: /search
      route:
        - destination:
            host: search-service.ms.svc.cluster.local
            port:
              number: 80
